# plants-image-analysis

./: .gitignore  README.md  colorSelector.py  main.py  pyproject.toml
notebooks/tests/: load_fastai_model.ipynb
scripts/: download_fastai_model.sh
