[tool.poetry]
name = "plants-image-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "plants_image_analysis"}]

[tool.poetry.dependencies]
python = "^3.8"
torchvision = ">=0.7.0,<0.8.0"
opencv-python = "^4.6.0.66"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"
fastai2 = "^0.0.30"
fastcore = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
